--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,7 @@ grails {
         compile 'uk.ac.ox.softeng.maurodatamapper:mdm-plugin-authentication-basic:4.0.0-SNAPSHOT'
         compile 'uk.ac.ox.softeng.maurodatamapper:mdm-plugin-datamodel:4.0.0-SNAPSHOT'
         compile 'uk.ac.ox.softeng.maurodatamapper:mdm-security:4.0.0-SNAPSHOT'
+        compile 'uk.ac.ox.softeng.maurodatamapper:mdm-plugin-terminology:4.0.0-SNAPSHOT'
     }
 }
 
