--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Core Info
-version=4.0.0-SNAPSHOT
+version=4.0.0
 group=uk.ac.ox.softeng.maurodatamapper
 # Gradle
 gradleVersion=6.7.1
@@ -14,6 +14,7 @@ oxbrcinformaticsGradlePluginsVersion=3.10
 licenseGradlePluginVersion:0.15.0
 licenseGradlePluginSpringCoreOverrideVersion=5.1.14.RELEASE
 ## Grails
+mdmCoreVersion=4.0.0
 grailsVersion=4.0.6
 grailsHibernate5Version=7.0.4
 grailsViewsVersion=2.0.4
