--- a/build.gradle
+++ b/build.gradle
@@ -125,14 +125,14 @@ bootRun {
 
 grails {
     plugins {
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-core:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-security:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-authentication-apikey:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-authentication-basic:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-dataflow:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-datamodel:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-referencedata:$mdmCoreVersion"
-        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-terminology:$mdmCoreVersion"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-core:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-security:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-authentication-apikey:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-authentication-basic:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-dataflow:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-datamodel:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-referencedata:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-terminology:$version"
     }
     if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
         logger.quiet('Using pathing Jar as running in Windows OS')
