--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,7 @@ grails {
         compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-referencedata:$version"
         compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-terminology:$version"
         compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-profile:$version"
+        compile "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-federation:$version"
     }
     if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
         logger.quiet('Using pathing Jar as running in Windows OS')
