--- a/build.gradle
+++ b/build.gradle
@@ -135,11 +135,15 @@ grails {
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-terminology:$version"
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-profile:$version"
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-federation:$version"
+        runtimeOnly 'uk.ac.ox.softeng.maurodatamapper.plugins:mdm-plugin-xsd:1.0.0-SNAPSHOT'
     }
-    if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
+
+/*
+
+  if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
         logger.quiet('Using pathing Jar as running in Windows OS')
         pathingJar = true
-    }
+    }*/
 }
 
 // Ensure the compile task in gradle runs all the classes tasks.
