--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import org.gradle.internal.os.OperatingSystem
-
 import java.util.concurrent.TimeUnit
 
 buildscript {
@@ -7,12 +5,11 @@ buildscript {
         mavenLocal()
         maven {url "https://jenkins.cs.ox.ac.uk/artifactory/plugins-snapshot"}
         maven {url "https://jenkins.cs.ox.ac.uk/artifactory/plugins-release"}
-        mavenCentral()
-
+        maven {url "https://repo.grails.org/grails/core"}
     }
     dependencies {
         classpath "ox.softeng.gradle:oxbrcinformatics-gradle-plugins:$oxbrcinformaticsGradlePluginsVersion"
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
+        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "org.grails.plugins:hibernate5:$grailsHibernate5Version"
         classpath "org.grails.plugins:views-gradle:$grailsViewsVersion"
 
@@ -36,10 +33,10 @@ plugins {
     id 'project-report'
 }
 
-apply plugin:"idea"
-apply plugin:"war"
-apply plugin:"org.grails.grails-web"
-apply plugin:"org.grails.plugins.views-json"
+apply plugin: "idea"
+apply plugin: "war"
+apply plugin: "org.grails.grails-web"
+apply plugin: "org.grails.plugins.views-json"
 apply plugin: "org.grails.plugins.views-markup"
 apply plugin: "com.github.hierynomus.license"
 apply plugin: 'ox.softeng.ox-brc-base'
@@ -48,7 +45,7 @@ repositories {
     mavenLocal()
     maven {url "https://jenkins.cs.ox.ac.uk/artifactory/libs-release"}
     maven {url "https://jenkins.cs.ox.ac.uk/artifactory/libs-snapshot"}
-    maven { url "https://repo.grails.org/grails/core" }
+    maven {url "https://repo.grails.org/grails/core"}
 }
 
 configurations {
@@ -60,58 +57,54 @@ configurations {
 
 dependencies {
     developmentOnly("org.springframework.boot:spring-boot-devtools")
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-codecs"
-    compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-datasource"
-    compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-web-boot"
-    compile "org.grails:grails-logging"
-    compile "org.grails.plugins:cache",{
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
-    }
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:events"
-    compile "org.grails.plugins:hibernate5:$grailsHibernate5Version"
-    compile "org.hibernate:hibernate-core"
-    compile "org.grails.plugins:views-json:$grailsViewsVersion"
-    compile "org.grails.plugins:views-json-templates:$grailsViewsVersion"
-    compile "org.grails.plugins:views-markup:$grailsViewsVersion"
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
-    // Until the fixes are published we need to use our versions of the profiles
-    profile "org.grails.profiles:rest-api", {
-        transitive false
-    }
-    profile "org.grails.profiles:plugin", {
-        transitive false
-    }
-    profile "org.grails.profiles:base:4.1.0.OXBRC", {
-        transitive false
-    }
-    runtime "org.glassfish.web:el-impl:2.1.2-b03"
-    runtime "com.h2database:h2"
-    runtime "org.apache.tomcat:tomcat-jdbc"
-    runtime "javax.xml.bind:jaxb-api:$jaxbApiVersion"
-    testCompile "org.grails:grails-gorm-testing-support"
-    testCompile "org.mockito:mockito-core"
-    testCompile "io.micronaut:micronaut-http-client"
-    testCompile "org.grails:grails-web-testing-support"
+    implementation "org.springframework.boot:spring-boot-starter-logging"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails:grails-core"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-tomcat"
+    implementation "org.grails:grails-plugin-url-mappings"
+    implementation "org.grails:grails-plugin-rest"
+    implementation "org.grails:grails-plugin-codecs"
+    implementation "org.grails:grails-plugin-interceptors"
+    implementation "org.grails:grails-plugin-services"
+    implementation "org.grails:grails-plugin-datasource"
+    implementation "org.grails:grails-plugin-databinding"
+    implementation "org.grails:grails-web-boot"
+    implementation "org.grails:grails-logging"
+    implementation "org.grails.plugins:cache"
+    implementation "org.grails.plugins:async"
+    implementation "org.grails.plugins:events"
+    implementation "org.grails.plugins:hibernate5"
+    implementation "org.hibernate:hibernate-core"
+    implementation "org.grails.plugins:views-json"
+    implementation "org.grails.plugins:views-json-templates"
+    implementation "org.grails.plugins:views-markup"
+    implementation "com.bertramlabs.plugins:asset-pipeline-grails:$assetPipelineVersion"
+    profile "org.grails.profiles:rest-api"
+    runtimeOnly "org.glassfish.web:el-impl:2.2.1-b05"
+    testRuntimeOnly "com.h2database:h2"
+    runtimeOnly "org.apache.tomcat:tomcat-jdbc"
+    runtimeOnly "javax.xml.bind:jaxb-api:$jaxbApiVersion"
+    testImplementation "io.micronaut:micronaut-inject-groovy"
+    testImplementation "org.grails:grails-gorm-testing-support"
+    testImplementation "org.mockito:mockito-core"
+    testImplementation "io.micronaut:micronaut-http-client"
+    testImplementation "org.grails:grails-web-testing-support"
+    testImplementation "org.grails:views-json-testing-support"
+    testImplementation "org.hibernate.validator:hibernate-validator:6.2.0.Final"
+    testImplementation "io.micronaut:micronaut-http-client"
 }
 
 bootRun {
     ignoreExitValue true
     jvmArgs(
-        '-Dspring.output.ansi.enabled=always', 
-        '-noverify', 
-        '-XX:TieredStopAtLevel=1')
+        '-Dspring.output.ansi.enabled=always',
+        '-noverify',
+        '-XX:TieredStopAtLevel=1',
+        '-Xmx1024m')
     sourceResources sourceSets.main
 
     System.properties.each {prop ->
@@ -136,17 +129,16 @@ grails {
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-profile:$version"
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-federation:$version"
     }
-    if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
-        logger.quiet('Using pathing Jar as running in Windows OS')
-        pathingJar = true
-    }
+//    if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
+//        logger.quiet('Using pathing Jar as running in Windows OS')
+//        pathingJar = true
+//    }
 }
 
-// Ensure the compile task in gradle runs all the classes tasks.
-compile.dependsOn(tasks.findAll {it.name.toLowerCase().endsWith('classes')})
 
 license {
-    header = file("${rootDir}/NOTICE")
+    header = file("${rootDir}/gradle/NOTICE.tmpl")
+    ext.year = Calendar.getInstance().get(Calendar.YEAR)
     excludes([
         '**/*.gson',
         '**/*.yml',
