--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform
+
 import java.util.concurrent.TimeUnit
 
 buildscript {
@@ -129,10 +131,10 @@ grails {
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-profile:$version"
         runtimeOnly "uk.ac.ox.softeng.maurodatamapper:mdm-plugin-federation:$version"
     }
-//    if (OperatingSystem.current() == OperatingSystem.WINDOWS) {
-//        logger.quiet('Using pathing Jar as running in Windows OS')
-//        pathingJar = true
-//    }
+    if (DefaultNativePlatform.getCurrentOperatingSystem().isWindows()) {
+        logger.quiet('Using pathing Jar as running in Windows OS')
+        pathingJar = true
+    }
 }
 
 
