Update to the BOM version of mdm-core
* Remove declared dependencies
* Remove logback.groovy
* Add base gson views
* Update the build file to use 8g ram
* Add a Jenkinsfile

--- a/build.gradle
+++ b/build.gradle
@@ -106,7 +106,7 @@ bootRun {
         '-Dspring.output.ansi.enabled=always',
         '-noverify',
         '-XX:TieredStopAtLevel=1',
-        '-Xmx1024m')
+        '-Xmx8g')
     sourceResources sourceSets.main
 
     System.properties.each {prop ->
