--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -149,3 +149,7 @@ dataSource:
     dbCreate: none
     url: 'jdbc:postgresql://${database.host}:${database.port}/${database.name}'
 ---
+grails:
+    plugins:
+        hibernatesearch:
+            rebuildIndexOnStart: false
