--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,6 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "org.grails.plugins:hibernate5:$grailsHibernate5Version"
         classpath "org.grails.plugins:views-gradle:$grailsViewsVersion"
-
-        // The version of spring-core included is 3.1.3.RELEASE which is incompatible with the grails-gradle-plugin used by all the
-        // the Grails modules and causes issues when trying to run-app therefore we exclude it
-        classpath("gradle.plugin.com.hierynomus.gradle.plugins:license-gradle-plugin:$licenseGradlePluginVersion") {
-            exclude group: 'org.springframework', module: 'spring-core'
-        }
-        // However without spring-core the license plugin won't work so we need to include it at the top level
-        // this version will need to be kept inline with Grails' spring-core
-        classpath "org.springframework:spring-core:$licenseGradlePluginSpringCoreOverrideVersion"
     }
     configurations.all {
         // check for updates every build
@@ -33,6 +24,7 @@ buildscript {
 
 plugins {
     id 'project-report'
+    id "com.github.hierynomus.license" version "${licenseGradlePluginVersion}"
 }
 
 apply plugin: "idea"
@@ -40,7 +32,6 @@ apply plugin: "war"
 apply plugin: "org.grails.grails-web"
 apply plugin: "org.grails.plugins.views-json"
 apply plugin: "org.grails.plugins.views-markup"
-apply plugin: "com.github.hierynomus.license"
 apply plugin: 'ox.softeng.ox-brc-base'
 
 repositories {
@@ -96,7 +87,7 @@ dependencies {
     testImplementation "io.micronaut:micronaut-http-client"
     testImplementation "org.grails:grails-web-testing-support"
     testImplementation "org.grails:views-json-testing-support"
-    testImplementation "org.hibernate.validator:hibernate-validator:6.2.0.Final"
+    testImplementation "org.hibernate.validator:hibernate-validator"
     testImplementation "io.micronaut:micronaut-http-client"
 }
 
