--- a/gradle.properties
+++ b/gradle.properties
@@ -23,10 +23,10 @@ assetPipelineVersion=3.4.6
 jaxbApiVersion=2.3.1
 springBootVersion=2.6.7
 
-# v2.2.1 includes a logback.xml file which needs to be removed before we can update
-views-json.version=2.2.0
-views-markup.version=2.2.0
-views-json-testing-support.version=2.2.0
-views-json-templates.version=2.2.0
-# This really needs updating ASAP but the v5/v6 builds have issues
-cache.version=4.0.3
+## v2.2.1 includes a logback.xml file which needs to be removed before we can update
+#views-json.version=2.2.0
+#views-markup.version=2.2.0
+#views-json-testing-support.version=2.2.0
+#views-json-templates.version=2.2.0
+## This really needs updating ASAP but the v5/v6 builds have issues
+#cache.version=4.0.3
