--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ sourceCompatibility=17
 targetCompatibility=17
 # Deployment & Build
 artifactory_contextUrl=https://jenkins.cs.ox.ac.uk/artifactory
-mdmGradlePluginVersion=1.3.0-SNAPSHOT
+mdmGradlePluginVersion=1.3.0
 licenseGradlePluginVersion=0.16.1
 # Grails
 grailsVersion=5.3.2
