--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         maven {url "https://mauro-repository.com/plugins-snapshot-local"}
         maven {url "https://mauro-repository.com/plugins-release-local"}
         maven { url "https://mauro-repository.com/libs-snapshot-local" }
+        maven {url 'https://mauro-repository.com/libs-release-local'}
         maven {url "https://repo.grails.org/grails/core"}
         maven {url 'https://plugins.gradle.org/m2/'}
     }
