--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -122,6 +122,7 @@ grails:
             autoNewLine: false
     databinding:
         dateFormats:
+            - "yyyy-MM-dd'T'HH:mm:ss.SSSSSSXXX"
             - "yyyy-MM-dd'T'HH:mm:ss.SSSXXX"
             - "yyyy-MM-dd'T'HH:mm:ss.SSXXX"
             - "yyyy-MM-dd'T'HH:mm:ss.SXXX"
